# databricks-kedro-bundle

./: README.md  databricks_template_schema.json
_dev2/: README.md  databricks.yml  pyproject.toml
_dev2/conf/: logging.yml
_dev2/conf/base/: catalog.yml  spark.yml
_dev2/docs/source/: conf.py
_dev2/resources/: kedro_project_iris_resources.yaml  kedro_project_irisunity_resources.yaml
_dev2/scripts/: deploy.bash
_dev2/src/kedro_project/: databricks_bundle.py  databricks_run.py  hooks.py  settings.py
_dev2/src/kedro_project/datasets/: __init__.py  unity_dataset.py
_dev2/src/kedro_project/pipelines/iris/: __init__.py  nodes.py  pipeline.py
_dev2/src/kedro_project/pipelines/irisunity/: __init__.py  nodes.py  pipeline.py
_dev2/tests/: test_pipeline.py  test_run.py
_dev2/tests/pipelines/iris/: test_pipeline.py
template/: .gitignore.tmpl  .tool-versions.tmpl  README.md.tmpl  _preample.tmpl  databricks.yml.tmpl  justfile.tmpl  pyproject.toml.tmpl  requirements.txt.tmpl
template/conf/: README.md  logging.yml  logging.yml.tmpl
template/conf/base/: catalog.yml.tmpl
template/conf/local/: catalog.yml.tmpl  spark.yml.tmpl
template/docs/source/: conf.py  conf.py.tmpl  index.rst  index.rst.tmpl
template/scripts/: deploy.bash.tmpl
template/src/{{.project_slug}}/: README.md  __init__.py.tmpl  databricks_bundle.py  settings.py.tmpl
template/src/{{.project_slug}}/datasets/: __init__.py.tmpl
template/tests/: test_run.py  test_run.py.tmpl
