
####################
# Rye settings     #
####################
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kedro_project"]

[project]
name = "kedro_project"
readme = "README.md"
version = "0.1.0"
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=0.19.5",
    "kedro-datasets[spark-sparkdataset, pandas-parquetdataset]>=3.0.0",
    "kedro-telemetry>=0.3.1",
    "numpy~=1.21",
    "pytest-cov~=3.0",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.1.8",
    "yamldiff>=0.3",
    "databricks-sdk>=0.27.1",
    "delta-spark>=3.2.0",
    "pandas~=2.2.2",
]

[project.scripts]
databricks_run = "kedro_project.databricks_run:main"
databricks_bundle = "kedro_project.databricks_bundle:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.18.0",
    "sphinx~=3.4.3",
    "sphinx_rtd_theme==0.5.1",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.11.1",
    "sphinx_copybutton==0.3.1",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.1.0",
    "myst-parser~=0.17.2",
]

####################
# Common settings  #
####################

[tool.kedro]
package_name = "kedro_project"
project_name = "kedro_project"
kedro_init_version = "0.19.5"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/kedro_project -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true
select = [
    "F",    # Pyflakes
    "W",    # pycodestyle
    "E",    # pycodestyle
    "I",    # isort
    "UP",   # pyupgrade
    "PL",   # Pylint
    "T201", # Print Statement
]
ignore = ["E501"] # Ruff format takes care of line-too-long
